# hIRoic_zephyr

./: .gitmodules  CMakeLists.txt  README.md  build.sh  flash.sh  prj.conf
boards/: stm32f746g_disco.conf  stm32f746g_disco.overlay
drivers/wm8994/: CMakeLists.txt  Kconfig  wm8994.c  wm8994.h
drivers/wm8994/dts/bindings/audio/: wolfson,wm8994.yaml
drivers/wm8994/zephyr/: module.yml
include/dt-bindings/clock/: stm32f7_sai_clock.h
src/: app_conf.h  dsp.c  dsp.h  ir_manager.c  ir_manager.h  main.c  wav_parser.c  wav_parser.h
